# lambda-maxmind-downloader

./: .gitignore  Dockerfile.jenkins  Jenkinsfile  Makefile  Pipfile  README.md  maxmind.py  pyproject.toml  setup.cfg
tests/: test_maxmind.py
