[tool.poetry]
name = "lambda-maxmind-downloader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.14.20"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
safety = "^1.9.0"
mypy = "^0.782"
bandit = "^1.6.2"
black = "^19.10b0"
pycodestyle = "^2.6.0"
pytest-cov = "^2.10.0"
pytest-black = "^0.3.10"
pytest-pycodestyle = "^2.1.3"
pyhamcrest = "^2.0.2"
moto = "^1.3.14"
requests_mock = "^1.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
